# hmc-dust

./: .gitignore  1D_own_HMC_current.ipynb  AI_Fourier_Transform_Code.ipynb  BananaTestOnRMHMC.ipynb  Better_HMC.py  DustMaps.ipynb  Gaussian_Process_Using_HMC_Class.ipynb  General_HMC.py  README.md  RMHMC.py  RMHMC2.py  RMHMC_building_blocks.ipynb  ben_fourier_transform_code.ipynb  blackjax_hmc_demo.ipynb  correlated_cov_matrix.npy  correlated_scale_cov_matrix.npy  cov_matrix.npy  cov_matrix_exp_int_fitting_variance_nu_matern.npy  cov_matrix_fitting_three_parameters_matern.npy  cov_matrix_fitting_variance_nu_matern.npy  cov_matrix_fitting_variance_scale_matern.npy  dylan_gp.ipynb  fitting_everything.ipynb  fitting_scale.ipynb  fitting_scale_nu.ipynb  fitting_scale_whitened.ipynb  fitting_variance_nu.ipynb  fitting_variance_nu_RMHMC.ipynb  fitting_variance_nu_exponentiated_integrated.ipynb  fitting_variance_scale.ipynb  fitting_variance_scale_nu_matern_fft.ipynb  fourier_transform_response.ipynb  hmc_exponential_test.ipynb  hmc_gaussian_process_test.ipynb  inference_integrated_exponentiated.ipynb  main.py  markdown_HMC_notes.ipynb  multidimensional_my_own_HMC.ipynb  my_own_1D_HMC.ipynb  playing_around_hamiltonian_mc.ipynb  (+4 more)
