[project]
name = "hmc-dust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arviz[all]>=1.2.0",
    "astropy>=8.0.0",
    "blackjax>=1.5",
    "dustmaps>=1.0.14",
    "healpy>=1.19.0",
    "jax>=0.10.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
]
